--- a/Math-Mania-HTML/Pages/Home.html
+++ b/Math-Mania-HTML/Pages/Home.html
@@ -2,19 +2,19 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
 
     <div class="App">
         <div class="mathManiaPadding">
-            <img src="MathMania.png" width="100%" />
+            <img src="../Assets/MathMania.png" width="100%" />
         </div>
         <div class="mathManiaButtonPadding">
             <div class="card">
-                <a href="SelectLevel.html">
-                    <img src="./rocket.png" width="90%" />
+                <a href="LevelSelect.html">
+                    <img src="../Assets/rocket.png" width="90%" />
                 </a>
             </div>
             </a>
