--- a/Math-Mania-HTML/random_equation_generator.html
+++ b/Math-Mania-HTML/random_equation_generator.html
@@ -218,8 +218,8 @@
             Your browser does not support the audio element.
         </audio>
         <div>
-            <a href="../Pages/LevelSelect.html">
-            <img src="../Assets/arrow.png" width="10%" class="arrowPadding"/>
+            <a href="./Pages/LevelSelect.html">
+            <img src="./Assets/arrow.png" width="10%" class="arrowPadding"/>
             </a>
     
             <div>
