Added credit page

--- a/Math-Mania-HTML/Pages/LevelSelect.html
+++ b/Math-Mania-HTML/Pages/LevelSelect.html
@@ -7,17 +7,17 @@
 
         function loadLevelZero() {
             sessionStorage.setItem("currentLevel", 0);
-            window.location.href = "../random_equation_generator.html";
+            window.location.href = "../index.html";
         }
     
         function loadLevelOne() {
             sessionStorage.setItem("currentLevel", 1);
-            window.location.href = "../random_equation_generator.html";
+            window.location.href = "../index.html";
         }
     
         function loadLevelTwo() {
             sessionStorage.setItem("currentLevel", 2);
-            window.location.href = "../random_equation_generator.html";
+            window.location.href = "../index.html";
         }
     </script>
 </head>
@@ -51,6 +51,7 @@
                     </a>
                 </div>
             </div>
+            <a href="../Pages/Credit.html"><span>Credit</span></a>
         </div>
     </div>
 
