--- a/Math-Mania-HTML/Pages/LevelSelect.html
+++ b/Math-Mania-HTML/Pages/LevelSelect.html
@@ -51,7 +51,7 @@
                     </a>
                 </div>
             </div>
-            <a href="../Pages/Credit.html"><span>Credit</span></a>
+            <a href="../Pages/Credit.html"><h1>Credit</h1></a>
         </div>
     </div>
 
